# tkgui

./: catalogo_enderecos.db  pyproject.toml
tkgui/: 001_aula.py  002_aula.py  003_aula.py  004_aula.py  005_aula.py  007_aula.py  008_aula.py  009_aula.py  010_aula.py  011_aula.py  012_aula.py  013_aula.py  014-aula.py  015_aula.py  016_aula.py  017_aula.py  018_aula.py  019_aula.py  020_aula.py  021_aula.py  022_aula.py
