[tool.poetry]
name = "tkgui"
version = "0.1.0"
description = ""
authors = ["renato-campos <renato.gomes.campos@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ttkbootstrap = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
